--- a/frontend/templates/alimentacion.html
+++ b/frontend/templates/alimentacion.html
@@ -25,7 +25,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Asesoramiento Nutricional</h2>
+            <h2 class="section-title-index">Asesoramiento Nutricional</h2>
             <p class="section-subtitle">Mi propuesta de asesoramiento nutricional es cercana, 
                 realista y personalizada. Te acompaño en el camino hacia una alimentación más consciente, 
                 saludable y alineada con tu estilo de vida. Ya sea que quieras mejorar tus hábitos, 
@@ -106,7 +106,7 @@
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
         <div class="container">
-            <h2 class="section-title">Contacto</h2>
+            <h2 class="section-title-index">Contacto</h2>
             <p class="section-subtitle">Contáctanos para solicitar más información y coordinar un asesoramiento</p>
             
             <div class="contact-content">
