--- a/frontend/templates/constelaciones.html
+++ b/frontend/templates/constelaciones.html
@@ -23,7 +23,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Constelaciones y Sanación Ancestral</h2>
+            <h2 class="section-title-index">Constelaciones y Sanación Ancestral</h2>
             <p class="section-subtitle">Los talleres de Constelaciones y Sanación Ancestral son procesos de 
                 transformación dentro de ti mism@ y en las diferentes esferas de tu vida, mediante la reparación 
                 a nivel emocional y psicoespiritual de las circunstancias que han ocasionado el conflicto presente, 
@@ -67,7 +67,7 @@
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
         <div class="container">
-            <h2 class="section-title">Contacto</h2>
+            <h2 class="section-title-index">Contacto</h2>
             <p class="section-subtitle">Contáctanos para solicitar más información y coordinar una sesión</p>
             
             <div class="contact-content">
