--- a/frontend/templates/pendulo_hebreo.html
+++ b/frontend/templates/pendulo_hebreo.html
@@ -23,7 +23,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Péndulo Hebreo</h2>
+            <h2 class="section-title-index">Péndulo Hebreo</h2>
             <p class="section-subtitle">El Péndulo Hebreo es una herramienta ancestral que utiliza la 
                 energía vibracional para equilibrar y armonizar el cuerpo, la mente y el espíritu. 
                 A través de su uso, se trabaja sobre los bloqueos energéticos, ayudando a restaurar 
@@ -94,7 +94,7 @@
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
         <div class="container">
-            <h2 class="section-title">Contacto</h2>
+            <h2 class="section-title-index">Contacto</h2>
             <p class="section-subtitle">Contáctanos para solicitar más información y coordinar una sesión</p>
             
             <div class="contact-content">
