--- a/frontend/templates/terapia_floral.html
+++ b/frontend/templates/terapia_floral.html
@@ -23,7 +23,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Terapia floral</h2>
+            <h2 class="section-title-index">Terapia floral</h2>
             <p class="section-subtitle">Las Esencias Áureas son remedios vibracionales que actúan directamente 
                 sobre nuestros campos energéticos, ayudando a restablecer el equilibrio emocional y energético. 
                 Aunque están relacionadas con las esencias florales tradicionales, se diferencian por su 
@@ -50,7 +50,7 @@
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
         <div class="container">
-            <h2 class="section-title">Contacto</h2>
+            <h2 class="section-title-index">Contacto</h2>
             <p class="section-subtitle">Contáctanos para solicitar más información y coordinar una sesión</p>
             
             <div class="contact-content">
