--- a/frontend/templates/yoga.html
+++ b/frontend/templates/yoga.html
@@ -27,7 +27,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Clases de Hatha Yoga</h2>
+            <h2 class="section-title-index">Clases de Hatha Yoga</h2>
             <p class="section-subtitle">Las clases de Hatha Yoga están diseñadas para equilibrar cuerpo y mente
                  a través de una práctica consciente y accesible. Cada clase tiene una duración de una hora e integra
                   pranayamas (ejercicios de respiración), asanas (posturas) y una meditación final que te permitirá
@@ -92,7 +92,7 @@
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
         <div class="container">
-            <h2 class="section-title">Contacto</h2>
+            <h2 class="section-title-index">Contacto</h2>
             <p class="section-subtitle">Contáctanos para solicitar más información y agendar tus clases</p>
             
             <div class="contact-content">
