--- a/frontend/templates/yoga_gong.html
+++ b/frontend/templates/yoga_gong.html
@@ -26,7 +26,7 @@
 
     <section id="clases-yoga" class="container-clases-yoga">
         <div class="container">
-            <h2 class="section-title">Experiencias de Yoga y Baño de Gong</h2>
+            <h2 class="section-title-index">Experiencias de Yoga y Baño de Gong</h2>
             <p class="section-subtitle">Encuentros diseñados para salir de la rutina y entrar en un 
                 espacio de profunda conexión interior. Comenzamos con una práctica suave de Hatha Yoga 
                 para abrir el cuerpo, calmar la mente y activar el flujo de energía. Luego, nos entregamos 
@@ -96,7 +96,7 @@
     <!-- Sección de Contacto -->
     <section id="contacto" class="contact">
         <div class="container">
-            <h2 class="section-title">Contacto</h2>
+            <h2 class="section-title-index">Contacto</h2>
             <p class="section-subtitle">Contáctanos para solicitar más información</p>
             
             <div class="contact-content">
