--- a/frontend/templates/constelaciones.html
+++ b/frontend/templates/constelaciones.html
@@ -60,6 +60,9 @@
             
            
         </div>
+        <div class="agenda-cta">
+            <a href="/eventos-disponibles?categoria=14" class="btn btn-primary btn-large">Ver próximos eventos</a>
+        </div>
     </section>
     
     
