--- a/frontend/templates/pendulo_hebreo.html
+++ b/frontend/templates/pendulo_hebreo.html
@@ -89,6 +89,9 @@
             </div>
             
         </div>
+        <div class="agenda-cta">
+            <a href="/eventos-disponibles?categoria=12" class="btn btn-primary btn-large">Ver próximos eventos</a>
+        </div>
     </section>
 
     <!-- Sección de Contacto -->
