--- a/frontend/templates/yoga.html
+++ b/frontend/templates/yoga.html
@@ -83,9 +83,10 @@
             </div>
 
             <div class="yoga-subcontainer">
-            </div>
-            
-           
+            </div>  
+        </div>
+        <div class="agenda-cta">
+            <a href="/eventos-disponibles?categoria=6" class="btn btn-primary btn-large">Ver próximos eventos</a>
         </div>
     </section>    
 
